manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-spring-boot-app-openshift
  labels:
    app: sample-spring-boot-app-openshift
spec:
  selector:
    matchLabels:
      app: sample-spring-boot-app-openshift
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: sample-spring-boot-app-openshift
        backstage.io/kubernetes-id: sample-spring-boot-app-openshift
    spec:
      containers:
        - name: sample-spring-boot-app-openshift
          image: image-registry.openshift-image-registry.svc:5000/demo/sample-spring-boot-app-openshift:1.0
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              memory: 1024Mi
