manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-spring-boot-app-openshift
  labels:
    app: sample-spring-boot-app-openshift
  annotations:
    backstage.io/kubernetes-id: sample-spring-boot-app-openshift
spec:
  type: ClusterIP
  selector:
    app: sample-spring-boot-app-openshift
  ports:
    - port: 8080
      protocol: TCP
      name: http
